# spine4.0-fix

./: README.md
spine-cpp/: CMakeLists.txt
spine-cpp/spine-cpp/include/spine/: RegionAttachment.h
spine-cpp/spine-cpp/src/spine/: RegionAttachment.cpp  Skeleton.cpp  SkeletonRenderer.cpp
spine-glfw/: CMakeLists.txt
spine-glfw/example/: main.cpp
spine-glfw/src/: spine-glfw.cpp  spine-glfw.h
spine-ts/: package.json
spine-ts/spine-core/: package.json
spine-ts/spine-core/src/attachments/: MeshAttachment.ts
spine-ts/spine-webgl/: package.json
spine-ts/spine-webgl/src/: LoadingScreen.ts  PolygonBatcher.ts  SkeletonRenderer.ts  WebGL.ts
